# coding-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SWE_BENCH_DOCKER_SETUP.md  config.toml  launch_swe_bench.py  main.py  pyproject.toml  swe_agent_local_runner.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
agent/: atomic_io.py  config.py  context.py  direct_agent.py  docker_bash_agent.py  history.py  logging_config.py  mcp_client.py  memory.py  repl.py  safety.py
agent/indexing/: __init__.py  indexer.py  models.py  parser.py
agent/llm/: __init__.py  client.py  parser.py  schema.py
agent/supervisor/: __init__.py  ipc.py  models.py  persistence.py  role_loader.py  scheduler.py  supervisor.py
agent/tools/: __init__.py  apply_patch.py  ask_user.py  base.py  code_search.py  execute_shell.py  fetch_url.py  find_definition.py  find_references.py  glob_search.py  list_directory.py  mcp_adapter.py  project_memory.py  read_file.py  read_multiple_files.py  set_todo.py  str_replace_file.py  symbol_search.py  web_search.py  write_file.py
agent/worker/: __init__.py  mock_llm.py  worker.py  worker_main.py
agents/: architect.yaml  coder.yaml  default.yaml  git.yaml  reviewer.yaml  tester.yaml
docs/: swe-bench-optimization-log.md
docs/plans/: 2026-06-15-coding-agent.md  2026-06-16-multi-file-and-code-index-plan.md
scripts/: anthropic_forward_proxy.py  build_swe_bench_base_image.py  compare_three_systems.py  eval_patches.py  run_e2e.py  run_swe_sample.py  setup_colima_docker.py
swe_agent_local_config/: _split_string.py  default_local.yaml  defaults.sh  submit.sh
swe_bench/: __main__.py  cli.py  dataset.py  docker.py  environment.py  evaluator.py  patch_collector.py  reporter.py  runner.py
tests/: conftest.py  test_apply_patch.py  test_atomic_io.py  test_config.py  test_context.py  test_direct_agent.py  test_find_definition.py  test_find_references.py  test_history.py  test_indexing.py  test_llm.py  test_logging_config.py  test_mcp_client.py  test_memory.py  test_read_multiple_files.py  test_repl.py  test_repl_indexing.py  test_repl_safety.py  test_repl_supervisor.py  test_safety.py  test_swe_agent_local_runner.py  test_symbol_search.py  test_tools.py
(+30 files in other folders)
